commit - fixed draw condition and modal visibility
I edited the tictactoe and rockpaperscizzors html to fix the modal visibilty. Also added a draw conditon to the tic tac toe game.

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ li.dropdown {
 }
 
 .modal {
-  display: block; /* Hidden by default */
+  display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   left: 0;
